--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "JATE",
+  "name": "JATE-OfflineNotes",
   "version": "1.0.0",
-  "description": "",
+  "description": "An application for creating notes with or without an internet connection",
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4"
